--- a/lib/lang/zh-cn.json
+++ b/lib/lang/zh-cn.json
@@ -1,4 +1,8 @@
 {
+    "language_mapping": "CHN_ENG",
+    "current_lang":"zh_cn.json",
+    "config_not_empty": "不能为空",
+    "config_cannot_use_default": "配置项 {} 不能使用默认值，请在配置文件中设置有效值",
     "config_auto_generated_comment": "自动生成的 {0} 模块配置文件",
     "config_module_file_generated": "已生成 {0} 模块配置文件: {1}",
     "config_last_generated_time": "最后生成时间",
@@ -46,6 +50,11 @@
     "font_not_detected": "\n提示：未检测到自定义字体文件，推荐在游戏资源文件中找到以下ttf字体文件并放在父目录:\n      - zh-cn.ttf (简体中文)\n      - zh-tw.ttf (繁体中文)\n      - ja-jp.ttf (日语，安装后将启用日语文字识别)\n      加载对应字体文件可有效提高OCR识别准确率，特别是避免破折号(——)被错误识别为(一一)的问题。",
     "multiple_fonts_warning": "\n警告：父目录中存在多个字体文件，不启用字体增强识别功能。\n      请确保父目录中只存在一种字体文件: zh-cn.ttf, zh-tw.ttf 或 ja-jp.ttf\n      当前检测到的字体文件: {}",
     "config_not_found": "配置文件config.txt不存在，尝试自动生成...",
+    "module_config_definition_not_found": "无法获取模块 '{0}' 的配置定义",
+    "module_name_not_valid": "模块名称必须是非空字符串",
+    "cannot_create_ocr_modules_dir": "无法创建ocr_modules目录: {0}",
+    "cannot_create_module_dir": "无法创建模块 '{0}' 的目录: {1}",
+    "language_system_loaded": "语言系统加载成功",
     "config_downloading": "正在从以下地址下载配置文件: {}",
     "config_load_success": "成功加载配置文件: {}",
     "config_generate_success": "成功生成配置文件: {}",
@@ -77,6 +86,10 @@
     "critical_file_download_fail": "关键文件 {} 下载失败",
     "exit_due_to_download_fail": "由于关键文件下载失败，程序将退出。",
     "ocr_mapping_load_fail": "加载OCR语言映射文件失败: {}",
+    "module_bootstrap_missing": "模块 {} 的 bootstrap.py 文件缺失或下载失败",
+    "module_method_missing": "模块 {} 缺少必要的方法: {}",
+    "module_bootstrap_error": "引导模块 {} 时出错: {}",
+
     "process_flow_fail": "处理流程执行失败",
     "process_complete": "处理完成！",
     "init_fail": "初始化失败: {}",
