新的模块注册逻辑

--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -88,6 +88,14 @@
     "module_bootstrap_missing": "Module {} bootstrap.py file is missing or failed to download",
     "module_method_missing": "Module {} is missing required method: {}",
     "module_bootstrap_error": "Error bootstrapping module {}: {}",
+
+    "config_output_ocr_debug": "Whether to output OCR debug information to a separate file",
+    "config_start_markers": "Start markers: When these text blocks are detected, start recording the text recognized in each image, multiple markers separated by commas",
+    "config_stop_markers": "Stop markers: When these text blocks are detected, stop recording the text recognized in each image, multiple markers separated by commas",
+    "config_ocr_module": "OCR module selection",
+    "config_max_vertical_images": "Maximum number of images for vertical stitching recognition",
+    "config_ocr_language": "OCR recognition language",
+
     "process_flow_fail": "Process flow execution failed",
     "process_complete": "Process complete!",
     "init_fail": "Initialization failed: {}",
@@ -120,6 +128,30 @@
     "debug_info_header": "=== OCR debug information ===\nProcessing time: {}\nTotal images processed: {}\nSuccessfully processed: {} images\nFailed to process: {} images\nFont enhancement used: {}\n",
     "debug_font_path": "Font path: {}\n",
     "high_precision": "High precision",
+    "must_be_integer": "Must be an integer, current value: {}",
+    "must_be_greater_or_equal": "Must be greater than or equal to {}, current value: {}",
+    "must_be_less_or_equal": "Must be less than or equal to {}, current value: {}",
+    "must_be_float": "Must be a float, current value: {}",
+    "must_be_boolean": "Must be a boolean (true/false), current value: {}",
+    "must_be_one_of_options": "Must be one of the following options: {}, current value: {}",
+    "cannot_be_empty": "Cannot be empty",
+    "lang_system_load_fail": "Language system loading failed: {}",
+    "current_dir": "Current directory: {}",
+    "program_will_exit": "Program will exit...",
+    "lang_system_load_fail_full": "Language system loading failed: {}\nCurrent directory: {}\nPython path: {}\nProgram will exit...",
+    "dependency_missing": "Missing dependencies: {}",
+    "trying_install_deps": "Trying to install missing dependencies...",
+    "executing": "Executing",
+    "install_failed": "Installation failed",
+    "error_info": "Error information",
+    "install_success": "Installation successful",
+    "install_exception": "Installation exception",
+    "dependency_guide_title": "Dependency Installation Guide",
+    "missing_deps_list": "Missing dependencies list:",
+    "install_commands_title": "Installation commands:",
+    "restart_note": "Please restart the program after installation.",
+    "guide_file_created": "Installation guide created: {}",
+    "restart_program": "Please restart the program to apply changes.",
     "general": "General",
     "image_stitch_error": "Image stitching error: {}",
     "image_size_exceeded": "Image size exceeds OCR module support range: {}\nCurrent size: {}x{} pixels\nMaximum supported size: {}x{} pixels",
