--- a/lib/lang/zh-cn.json
+++ b/lib/lang/zh-cn.json
@@ -90,6 +90,13 @@
     "module_method_missing": "模块 {} 缺少必要的方法: {}",
     "module_bootstrap_error": "引导模块 {} 时出错: {}",
 
+    "config_output_ocr_debug": "是否输出OCR调试信息到独立文件",
+    "config_start_markers": "开始标记: 当检测到这些文字块时开始记录每张图片内识别到的文本，多个标记用逗号分隔",
+    "config_stop_markers": "结束标记: 当检测到这些文字块时停止记录每张图片内识别到的文本，多个标记用逗号分隔",
+    "config_ocr_module": "OCR模块选择",
+    "config_max_vertical_images": "纵向拼接识别的最大图片数量",
+    "config_ocr_language": "OCR识别语言",
+
     "process_flow_fail": "处理流程执行失败",
     "process_complete": "处理完成！",
     "init_fail": "初始化失败: {}",
@@ -119,4 +126,29 @@
     "general": "通用",
     "image_stitch_error": "图片拼接出错: {}",
     "image_size_exceeded": "图片尺寸超出OCR模块支持范围: {}\n当前尺寸: {}x{}像素\n最大支持尺寸: {}x{}像素",
-    "image_size_check_error": "检查图片尺寸时出错: {}\n错误信息: {}\n"}
+    "image_size_check_error": "检查图片尺寸时出错: {}\n错误信息: {}\n",
+    "must_be_integer": "必须是整数，当前值: {}",
+    "must_be_greater_or_equal": "必须大于或等于 {}, 当前值: {}",
+    "must_be_less_or_equal": "必须小于或等于 {}, 当前值: {}",
+    "must_be_float": "必须是浮点数，当前值: {}",
+    "must_be_boolean": "必须是布尔值(true/false)，当前值: {}",
+    "must_be_one_of_options": "必须是以下选项之一: {}, 当前值: {}",
+    "cannot_be_empty": "不能为空值",
+    "lang_system_load_fail": "语言系统加载失败: {}",
+    "current_dir": "当前目录: {}",
+    "program_will_exit": "程序将退出...",
+    "lang_system_load_fail_full": "语言系统加载失败: {}\n当前目录: {}\nPython路径: {}\n程序将退出...",
+    "dependency_missing": "缺少依赖: {}",
+    "trying_install_deps": "尝试安装缺失的依赖...",
+    "executing": "正在执行",
+    "install_failed": "安装失败",
+    "error_info": "错误信息",
+    "install_success": "安装成功",
+    "install_exception": "安装异常",
+    "dependency_guide_title": "依赖安装指南",
+    "missing_deps_list": "缺失的依赖列表:",
+    "install_commands_title": "安装命令:",
+    "restart_note": "安装完成后，请重启程序。",
+    "guide_file_created": "安装指南已创建: {}",
+    "restart_program": "请重启程序以应用更改。"
+}
