铲了配置系统，模块自引导系统，主程序自引导系统的屎山

--- a/lib/ocr_modules/baidu/lang/en.json
+++ b/lib/ocr_modules/baidu/lang/en.json
@@ -1,43 +1,57 @@
 {
-    "baidu_config_created": "Created Baidu OCR configuration file: {}",
-    "baidu_config_need_edit": "Please edit this file and fill in your Baidu OCR API keys, then run the script again",
+    "dir_not_found": "Directory not found: {}",
+    "dir_created": "Directory created: {}",
+    "dir_checking": "Checking directory: {}",
+    "file_found": "File found: {}",
+    "file_not_found": "File not found: {}",
+    "download_success": "Download successful: {}",
+    "download_fail": "Download failed ({}): {}",
+    "retry_attempt": "Retry attempt {}...",
+    "max_retries_reached": "Max retries reached ({})",
+    "critical_file_download_fail": "Critical file download failed: {}",
+    "check_start": "Starting module file check...",
+    "check_complete": "Check complete",
+    "exit_due_to_download_fail": "Exiting due to file download failure",
+    "complete_fail": "Module completion failed: {}",
+    "baidu_config_created": "Baidu OCR configuration file created: {}",
+    "baidu_config_need_edit": "Please edit this file and enter your Baidu OCR API keys, then rerun the script",
     "baidu_config_create_fail": "Failed to create Baidu OCR configuration file: {}",
-    "baidu_config_incomplete": "Baidu OCR configuration file {} is incomplete or using default values, please edit this file",
+    "baidu_config_incomplete": "Baidu OCR configuration file {} is incomplete or using default values, please edit it",
     "baidu_config_read_fail": "Failed to read Baidu OCR configuration file: {}",
     "baidu_lang_dir_create_fail": "Failed to create language directory: {}",
-    "baidu_lang_file_created": "Created language file: {}",
+    "baidu_lang_file_created": "Language file created: {}",
     "baidu_lang_file_create_fail": "Failed to create language file {}: {}",
-    "baidu_lang_file_not_available": "Error: Module author not completed, unable to obtain language file",
+    "baidu_lang_file_not_available": "Error: Module author incomplete, unable to obtain language file",
     "ocr_module_not_found": "OCR module directory not found",
     "ocr_module_create_prompt": "Please create this directory and add necessary files",
     "ocr_module_init_not_found": "OCR module initialization file not found",
     "ocr_module_install_prompt": "Please install this module or check network connection",
     "ocr_module_init_fail": "OCR module initialization failed",
     "ocr_module_load_error": "Error loading OCR module",
-    "baidu_config_invalid": "Baidu OCR configuration is invalid, please check APP_ID, API_KEY and SECRET_KEY in lib/baidu/config.txt file",
+    "baidu_config_invalid": "Invalid Baidu OCR configuration, please check APP_ID, API_KEY and SECRET_KEY in lib/baidu/config.txt",
     "aip_module_not_found": "aip module not found, please install: pip install baidu-aip",
     "baidu_ocr_client_init_fail": "Failed to initialize Baidu OCR client: {}",
     "baidu_lang_file_load_fail": "Failed to load Baidu OCR language file: {}",
     "ocr_recognition_fail": "OCR recognition failed: {}",
     "ocr_process_error": "Error during OCR recognition: {}",
-    "high_precision_mode": "High precision",
+    "high_precision_mode": "High Precision",
     "general_mode": "General",
-    "recognition_failed": "Recognition failed",
-    "ocr_debug_header": "=== Image {} OCR recognition results ===",
-    "recognition_mode": "Recognition mode",
-    "recognition_type": "Recognition type",
+    "recognition_failed": "Recognition Failed",
+    "ocr_debug_header": "=== Image {} OCR Recognition Result ===",
+    "recognition_mode": "Recognition Mode: {}",
+    "recognition_type": "Recognition Type: {}",
     "unknown": "Unknown",
-    "recognized_text": "Recognized text",
-    "api_status": "API return status",
+    "recognized_text": "Recognized Text: {}",
+    "api_status": "API Return Status: {}",
     "success": "Success",
     "failure": "Failure",
-    "error_message": "Error message",
-    "raw_recognition_result": "Raw recognition result",
-    "block_details": "Block details:",
-    "block_content": "  Block {}: content=\"{}\"",
-    "block_confidence": ", confidence={}",
-    "processing": "Processing: Retain",
-    "module_mandatory_config": "Module {} mandatory configuration is missing, please check the configuration file",
+    "error_message": "Error Message: {}",
+    "raw_recognition_result": "Raw Recognition Result: {}",
+    "block_details": "Block Details:",
+    "block_content": "  Block {}: Content=\"{}\"",
+    "block_confidence": ", Confidence={}",
+    "processing": "Processing: Keep",
+    "module_mandatory_config": "Module {} mandatory configuration missing, please check configuration file",
     "module_bootstrap_fail": "Module {} bootstrap failed",
-    "config_cannot_use_default": "Configuration file {} cannot use default values, please check the configuration file"
+    "config_cannot_use_default": "Configuration file {} cannot use default values, please check configuration file"
 }
