终于又可以用了

--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -27,10 +27,42 @@
     "config_ensure.py开始": "Keys from config_ensure.py file",
     "module_config_definition_not_found": "Cannot get configuration definition for module '{}'",
     "config_ensure.py结束": "End of keys from config_ensure.py file",
-    
+
+    "config_generator.py开始": "Keys from config_generator.py file",
+    "config_module_file": "Module configuration file",
+    "config_main_file": "Main configuration file",
+    "config_auto_generated": "{} - Auto-generated configuration file",
+    "config_last_generated_time": "Last generated time: {}",
+    "config_not_empty": "This configuration item cannot be empty",
+    "config_option_values": "Optional values: {}",
+    "config_value_range": "Value range: {} to {}",
+    "config_generate_success": "Configuration file successfully generated: {}",
+    "config_generate_fail": "Failed to generate configuration file: {}",
+    "config_generator.py结束": "End of keys from config_generator.py file",
+
+    "config_loader.py开始": "Keys from config_loader.py file",
+    "config_file_not_found": "Configuration file not found: {}",
+    "config_cannot_use_default": "Configuration item {} cannot use default value",
+    "must_be_integer": "Value '{}' must be an integer",
+    "must_be_greater_or_equal": "Value must be greater than or equal to {}. Current value: {}",
+    "must_be_less_or_equal": "Value must be less than or equal to {}. Current value: {}",
+    "must_be_float": "Value '{}' must be a float",
+    "must_be_boolean": "Value '{}' must be a boolean (true/false)",
+    "must_be_one_of_options": "Value must be one of: {}. Current value: {}",
+    "cannot_be_empty": "Value cannot be empty",
+    "config_validation_error": "Configuration item {} validation failed: {}",
+    "using_default_value": "Using default value: {}",
+    "unknown_config_key": "Unknown configuration key: {}",
+    "config_read_error": "Failed to read configuration file: {}",
+    "missing_required_config": "Missing required configuration item: {}",
+    "config_load_success": "Configuration file loaded successfully: {}",
+    "config_loader.py结束": "End of keys from config_loader.py file",
+
     "text_processor.py开始": "Keys from text_processor.py file",
     "init_fail": "Initialization failed: {}",
+    "script_execution_error": "Script execution error: {}",
     "text_processor.py结束": "End of keys from text_processor.py file",
+
     
     "text_extractor.py开始": "Keys from text_extractor.py file",
     "ocr_recognition_failed": "OCR recognition failed",
@@ -43,7 +75,10 @@
     "module_bootstrap_missing": "Module {}'s bootstrap.py file is missing or failed to download",
     "module_method_missing": "Module {} is missing required method: {}",
     "ocr_module_bootstraper.py结束": "End of keys from ocr_module_bootstraper.py file",
-    
+    "module_mandatory_config": "Module {} has mandatory configuration items, please edit the configuration file manually",
+    "module_self_completion_fail": "Module {} self-completion failed",
+    "module_bootstrap_error": "Module {} bootstrap failed: {}",
+
     "font_enhancement_detector.py开始": "Keys from font_enhancement_detector.py file",
     "font_file_load_error": "Failed to load font mapping file: {}",
     "cache_initialization_error": "Error initializing font enhancement detector cache: {}",
