--- a/lib/lang/zh-cn.json
+++ b/lib/lang/zh-cn.json
@@ -27,10 +27,42 @@
     "config_ensure.py开始": "以下键来自config_ensure.py文件",
     "module_config_definition_not_found": "无法获取模块 '{}' 的配置定义",
     "config_ensure.py结束": "以上键来自config_ensure.py文件",
-    
+
+    "config_generator.py开始": "以下键来自config_generator.py文件",
+    "config_module_file": "模块配置文件",
+    "config_main_file": "主配置文件",
+    "config_auto_generated": "{} - 自动生成的配置文件",
+    "config_last_generated_time": "最后生成时间: {}",
+    "config_not_empty": "此配置项不能为空",
+    "config_option_values": "可选值: {}",
+    "config_value_range": "值范围: {} 到 {}",
+    "config_generate_success": "配置文件已成功生成: {}",
+    "config_generate_fail": "生成配置文件失败: {}",
+    "config_generator.py结束": "以上键来自config_generator.py文件",
+
+    "config_loader.py开始": "以下键来自config_loader.py文件",
+    "config_file_not_found": "配置文件不存在: {}",
+    "config_cannot_use_default": "配置项 {} 不能使用默认值",
+    "must_be_integer": "值 '{}' 必须是整数",
+    "must_be_greater_or_equal": "值必须大于或等于 {}. 当前值: {}",
+    "must_be_less_or_equal": "值必须小于或等于 {}. 当前值: {}",
+    "must_be_float": "值 '{}' 必须是浮点数",
+    "must_be_boolean": "值 '{}' 必须是布尔值 (true/false)",
+    "must_be_one_of_options": "值必须是以下之一: {}. 当前值: {}",
+    "cannot_be_empty": "值不能为空",
+    "config_validation_error": "配置项 {} 验证失败: {}",
+    "using_default_value": "将使用默认值: {}",
+    "unknown_config_key": "未知的配置项: {}",
+    "config_read_error": "读取配置文件失败: {}",
+    "missing_required_config": "缺少必需的配置项: {}",
+    "config_load_success": "配置文件已成功加载: {}",
+    "config_loader.py结束": "以上键来自config_loader.py文件",
+
     "text_processor.py开始": "以下键来自text_processor.py文件",
     "init_fail": "初始化失败: {}",
+    "script_execution_error": "脚本执行错误: {}",
     "text_processor.py结束": "以上键来自text_processor.py文件",
+
     
     "text_extractor.py开始": "以下键来自text_extractor.py文件",
     "ocr_recognition_failed": "OCR识别失败",
@@ -43,7 +75,10 @@
     "module_bootstrap_missing": "模块 {} 的 bootstrap.py 文件缺失或下载失败",
     "module_method_missing": "模块 {} 缺少必要的方法: {}",
     "ocr_module_bootstraper.py结束": "以上键来自ocr_module_bootstraper.py文件",
-    
+    "module_mandatory_config": "模块 {} 有必填配置项，需要手动编辑配置文件",
+    "module_self_completion_fail": "模块 {} 自补全失败",
+    "module_bootstrap_error": "模块 {} 引导失败: {}",
+
     "font_enhancement_detector.py开始": "以下键来自font_enhancement_detector.py文件",
     "font_file_load_error": "加载字体映射文件失败: {}",
     "cache_initialization_error": "初始化字体增强检测器缓存时出错: {}",
