修复了OCRModuleBootstraper的自动下载，而且只下载脚本文件时不再需要启动两次

--- a/lib/lang/zh-cn.json
+++ b/lib/lang/zh-cn.json
@@ -73,13 +73,13 @@
     "text_extractor.py结束": "以上键来自text_extractor.py文件",
     
     "ocr_module_bootstraper.py开始": "以下键来自ocr_module_bootstraper.py文件",
-    "module_bootstrap_missing": "模块 {} 的 bootstrap.py 文件缺失或下载失败",
+    "module_bootstrap_missing": "模块 {} 的 module_bootstrap.py 文件缺失或下载失败",
     "module_method_missing": "模块 {} 缺少必要的方法: {}",
     "ocr_module_bootstraper.py结束": "以上键来自ocr_module_bootstraper.py文件",
     "download_url_not_set": "项目下载URL未设置",
-    "bootstrap_not_found": "模块 {} 的bootstrap.py文件未找到: {}",
-    "bootstrap_downloaded": "成功下载模块 {} 的bootstrap.py文件",
-    "bootstrap_download_failed": "下载模块 {} 的bootstrap.py文件失败: {}",
+    "bootstrap_not_found": "模块 {} 的module_bootstrap.py文件未找到: {}",
+    "bootstrap_downloaded": "成功下载模块 {} 的module_bootstrap.py文件",
+    "bootstrap_download_failed": "下载模块 {} 的module_bootstrap.py文件失败: {}",
     "module_mandatory_config": "模块 {} 有必填配置项，需要手动编辑配置文件",
     "module_self_completion_fail": "模块 {} 自补全失败",
     "module_bootstrap_error": "模块 {} 引导失败: {}",
