--- a/lib/lang/en.json
+++ b/lib/lang/en.json
@@ -72,13 +72,13 @@
     "text_extractor.py结束": "End of keys from text_extractor.py file",
     
     "ocr_module_bootstraper.py开始": "Keys from ocr_module_bootstraper.py file",
-    "module_bootstrap_missing": "Module {}'s bootstrap.py file is missing or failed to download",
+    "module_bootstrap_missing": "Module {}'s module_bootstrap.py file is missing or failed to download",
     "module_method_missing": "Module {} is missing required method: {}",
     "ocr_module_bootstraper.py结束": "End of keys from ocr_module_bootstraper.py file",
     "download_url_not_set": "Project download URL is not set",
-    "bootstrap_not_found": "Module {}'s bootstrap.py file not found: {}",
-    "bootstrap_downloaded": "Successfully downloaded module {}'s bootstrap.py file",
-    "bootstrap_download_failed": "Failed to download module {}'s bootstrap.py file: {}",
+    "bootstrap_not_found": "Module {}'s module_bootstrap.py file not found: {}",
+    "bootstrap_downloaded": "Successfully downloaded module {}'s module_bootstrap.py file",
+    "bootstrap_download_failed": "Failed to download module {}'s module_bootstrap.py file: {}",
     "module_mandatory_config": "Module {} has mandatory configuration items, please edit the configuration file manually",
     "module_self_completion_fail": "Module {} self-completion failed",
     "module_bootstrap_error": "Module {} bootstrap failed: {}",
